# dpa-aariu-int

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Progetto Candiati BU Cyber.docx  README.md  docker-compose.yml  pyproject.toml  tasks.md
app/: celery_app.py  config.py  database.py  main.py  models.py  schemas.py  tasks.py
app/routers/: baselines.py  checks.py  dashboard.py  urls.py
app/services/: analyzer.py  baseline.py  fetcher.py  scheduler.py
app/utils/: ai_client.py  openai_client.py
docs/: analisi-ai.md  architettura.md  diagrammi.md  schema.sql  test-guide.md
tests/: conftest.py
tests/integration/: test_baselines_api.py  test_checks_api.py  test_dashboard_api.py  test_urls_api.py
tests/unit/: test_analyzer.py  test_fetcher.py  test_schemas.py
